fix: update placeholder styles in search bar for improved readability

--- a/style/board.css
+++ b/style/board.css
@@ -40,6 +40,11 @@ body {
     width: 230px;
 }
 
+.searchBar input::placeholder{
+    font-size: 24px;
+    color: #d1d1d1;
+}
+
 .tableCategories td {
     display: flex;
     justify-content: space-between;
